bdr.BDR2.scala.error
Erreur de compilation :
BDR2:22: error: ';' expected but 'else' found.
    } else if (fini==true)
      ^